fix issue on ios 8 and ie

--- a/data/ext/perspectiveGrid/extension.css
+++ b/data/ext/perspectiveGrid/extension.css
@@ -4,6 +4,8 @@
   display: -ms-flexbox;
 
   flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
 }
 
 .fileTile {
